# chatbotapp

./: .env.example  .gitignore  COPYRIGHT.md  COPYRIGHT.txt  LICENSE  LICENSE.md  Procfile  README.md  base.py  nltk.txt  requirements.txt  setup.cfg  setup.py
chatbotapp/: asgi.py  settings.py  urls.py  wsgi.py
chatbotapp/accounts/: README.md  admin.py  forms.py  models.py  urls.py  views.py
chatbotapp/accounts/migrations/: 0001_initial.py  0002_auto_20200609_1629.py
chatbotapp/chatbot/: README.md  admin.py  apps.py  models.py  urls.py  views.py
chatbotapp/chatbot/botbrain/: aimlbot.py  old_aimlbot.py
chatbotapp/chatbot/migrations/: 0001_initial.py  (+1 more)
chatbotapp/core/: README.md  admin.py  apps.py  forms.py  mail.py  models.py  urls.py  utils.py  views.py
chatbotapp/templates/: base.html  base_content.html
docs/: _config.yml  index.md
staticfiles/: staticfiles.json
staticfiles/scripts/: script.11cb8c5f1a7f.js  script.1b6bd8bc8b97.js  script.3b97b04bfea9.js  script.3da8615fc9c2.js  script.3dc91bc6ed2e.js  script.40ca8be91842.js  script.44d5751364ba.js  script.593367df4389.js  script.5ab97072d20a.js  script.63cb72157c76.js  script.76916eb88110.js  script.76b6d83c39cb.js  script.772f83353f5f.js  script.9b3af6f80f79.js  script.b71060b22a4b.js  script.b756e3f3e199.js  script.bd958bc31eca.js  script.eed4fc25be54.js  script.f5480f72fd4c.js  script.js  shared-data.784353ae1ab1.js  shared-data.a5b3b108177b.js  shared-data.e1a999c511e2.js  shared-data.js
staticfiles/styles/: pure-based.195dcbfb1c39.css  pure-based.38c326caa31d.css  pure-based.9ad605e789cd.css
(+305 files in other folders)
