[metadata]
name = chatbotapp
version = 1.0
description = A Django app to handle an AIML chatbot.
long_description = file: README.md
url = https://www.example.com/
author = Guilherme Alexandre dos Santos Johann
author_email = g.johann98@gmail.com
keywords = chatbot, aiml, programy
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: Programy
    Intended Audience :: Developers
    License :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
